Better Boxes/Box/PaddedBox/isolated CSS classes (PaddedBox is Box-padded renamed and not dependant of Box being applied; Box does not depend on Boxes being applied on container), with sizes following Bootstrap convention and adjusted to be more useful and generic; added utility col-*-reset CSS classes, per size in the inverse of Bootstrap that allows to remove padding from greater col sizes, avoiding unwanted gaps in mobile because of desktop implementation; with all that, I was able to implement the design from mobile to desktop large of Client Booking.

--- a/prototypes/app/source/css/app.styl
+++ b/prototypes/app/source/css/app.styl
@@ -10,9 +10,6 @@
 
 /** Utilities styles **/
 @import 'utils/isolated.styl'
-.isolated {
-    isolated();
-}
 @import 'utils/backdrop.styl'
 body {
     backdrop();
